Fixing black background in search form behind keywords.

--- a/themes/wmmr/assets/css/wmmr.css
+++ b/themes/wmmr/assets/css/wmmr.css
@@ -15121,6 +15121,8 @@ table.responsive tr:nth-of-type(even) {
       background-color: #fff !important; }
     .header__search--form .header-search-body {
       background: #fff; }
+    .header__search--form .keyword-search {
+      background-color: #fff; }
   .home__featured {
     background-color: #f2f2f2; }
     .home__featured .featured__content--block {
